# biHelix

./: CMakeLists.txt  LICENSE  README  README.md  README.rst  README.txt  meson.build  meson_options.txt
cmake/Modules/: SetFortranFlags.cmake
example/: Readme.md
example/stride/: 4zow.stride
include/: .gitkeep
lib/: cla.mod  helanal.mod  interp_hel.mod  kinds.mod  linalg.mod  memory.mod  pdblib.mod  precision.mod  utilities.mod
src/: CMakeLists.txt  atom.f90  atom.f95  cla.f90  cla.f95  desp.f90  group.f90  group.f95  helanal.f90  helanal.f95  interp_hel.f90  interp_hel.f95  io.f90  io.f95  kinds.f90  linalg.f90  linalg.f95  main.f90  main.f95  mem_mod.f90  memory.f95  meson.build  pdblib.f95  precision.f90  precision.f95  stringmod.f90  utilities.f90  utilities.f95
